--- a/squarecloud.config
+++ b/squarecloud.config
@@ -1,5 +1,5 @@
-DISPLAY_NAME=IVM
-DESCRIPTION=Bot IVM
+DISPLAY_NAME=RE=L
+DESCRIPTION=Bot RE=L
 MAIN=__main__.py
-MEMORY=256
+MEMORY=128
 VERSION=recommended
