--- a/utils/config.json
+++ b/utils/config.json
@@ -1,6 +1,6 @@
 {
-  "token": "MTA2NDkzODk3OTQwNjkyMTczOA.G3ltZA.vv-GhAJUEH01JTuVgWtqILPosY-8blm2K9B0IU",
-  "mongokey": "mongodb+srv://Marciel:roPbLXJEEu5w0v4c@markuus.c1awv.mongodb.net/test?authSource=admin&replicaSet=atlas-4n715z-shard-0&readPreference=primary&ssl=true",
+  "token": "",
+  "mongokey": "",
   "topggkey": "",
 
   "guild": 1003002386706612354,
